[project]
name = "comfyui-checkpoint-handpicker-suite"
version = "0.1.0"
description = "Checkpoint list selection, cycling, tagging, filtering, and lightweight preview tools for ComfyUI."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

[tool.comfy]
PublisherId = "ruminar"
DisplayName = "ComfyUI-CheckpointHandpickerSuite"
Icon = ""
