[project]
name = "checkpoint-handpicker-suite"
version = "0.2.0"
description = "A deluxe checkpoint jukebox and review desk for ComfyUI. Review-first checkpoint cycling and handpicking suite: non-invasive checkpoint switcher, rotation/cycler helper, random checkpoint selector, and cleanup workflow without replacing Load Checkpoint."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/ruminar/ComfyUI-CheckpointHandpickerSuite"
Documentation = "https://github.com/ruminar/ComfyUI-CheckpointHandpickerSuite/blob/main/doc/HOW_TO_USE.md"
"Bug Tracker" = "https://github.com/ruminar/ComfyUI-CheckpointHandpickerSuite/issues"

[tool.comfy]
PublisherId = "ruminar"
DisplayName = "Checkpoint Handpicker Suite"
Icon = "https://raw.githubusercontent.com/ruminar/ComfyUI-CheckpointHandpickerSuite/main/icon.png"